--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -36,8 +39,14 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    lint{
+        disable 'TyphographyQuotes'
+        lintConfig file("lint.xml")
+    }
 }
 
+//noinspection SpellCheckingInspection
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -50,11 +59,11 @@ dependencies {
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    kapt "androidx.room:room-compiler:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
@@ -70,6 +79,25 @@ dependencies {
 
     // Optional -- Mockk framework
     testImplementation "io.mockk:mockk:1.13.1"
+
+    //    library untuk livedata
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    // Dagger and Hilt
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
+
+    //data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //firebase
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
 
 
 
