--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        // Add the dependency for the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
+        classpath 'com.android.tools.build:gradle:3.4.0'
 
     }
 
