--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,14 @@ android {
 
     productFlavors{
 
-
-
-
         loginblue{
             applicationIdSuffix ".loginblue"
             dimension "movie"
         }
+
+
+
+
 
 
     }
@@ -72,7 +73,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
